--- a/config/application.properties
+++ b/config/application.properties
@@ -1,7 +1,7 @@
-server.port=8080
+server.port=9090
 spring.datasource.url:jdbc:mysql://localhost:3306/sawa_spring
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=toffy
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
